<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:background="#464545"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".Main">

    <TextView
            android:id="@+id/textReteh"
            android:textColor="#BAAFAF"
            android:gravity="center"
            android:text="@string/by_retechgroup"
            android:layout_below="@id/image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:layout_marginTop="44dp" android:textSize="18sp"/>

    <ImageView
            android:id="@+id/image"
            app:srcCompat="@drawable/ic_action_name"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerInParent="true"
            android:contentDescription="@string/home"/>
    <TextView
            android:id="@+id/text"
            android:textColor="#fff"
            android:gravity="center"
            android:text="@string/smart_home"
            android:layout_below="@id/image"
            android:layout_width="match_parent"
            android:textAllCaps="true"
            android:layout_height="wrap_content" android:textSize="30sp"/>
    <ProgressBar
            android:padding="6dp"
            android:layout_width="45dp"
            android:layout_height="45dp" android:layout_alignParentStart="true" android:layout_marginStart="183dp"
            android:layout_alignParentEnd="true" android:layout_marginEnd="183dp"
            android:layout_alignParentBottom="true" android:layout_marginBottom="114dp"
            style="@android:style/Widget.DeviceDefault.Light.ProgressBar"/>

</RelativeLayout>