<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Settings">

    <Button
            android:text="@string/save"
            android:onClick="saveSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button5" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.374" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="36dp"/>
    <Button
            android:text="@string/back"
            android:onClick="backToPrevious"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button3" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.752" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="36dp"/>
    <TextView
            android:layout_width="75dp"
            android:layout_height="32dp"
            android:text="@string/server_ip"
            android:id="@+id/textView5"
            android:textAlignment="viewStart" android:textSize="18sp"
            android:layout_marginTop="36dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="288dp" app:layout_constraintEnd_toEndOf="parent"/>
    <EditText
            android:layout_width="198dp"
            android:layout_height="40dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editText" android:layout_marginTop="28dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="60dp"
            app:layout_constraintEnd_toEndOf="parent" android:autofillHints="192.168..."/>


</androidx.constraintlayout.widget.ConstraintLayout>