<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:background="#ffffff"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Main">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option3"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="380dp" app:layout_constraintHorizontal_bias="0.096"
            android:id="@+id/textView2" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:textAlignment="viewStart" android:textSize="18sp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option1"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="540dp" app:layout_constraintHorizontal_bias="0.096"
            android:id="@+id/textView4" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:textAlignment="viewStart" android:textSize="18sp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option2"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="460dp" app:layout_constraintHorizontal_bias="0.096"
            android:id="@+id/textView" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:textAlignment="viewStart" android:textSize="18sp"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option4"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="304dp" app:layout_constraintHorizontal_bias="0.096"
            android:id="@+id/textView3" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:textAlignment="viewStart" android:textSize="18sp"/>
    <Button
            android:text="@string/buttonSettings"
            android:onClick="settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="36dp"
            android:layout_marginEnd="68dp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="1.0"/>
    <Button
            android:text="@string/button"
            android:onClick="updateMe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button2" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.461" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="36dp"/>
    <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/switch1" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="52dp" app:layout_constraintTop_toBottomOf="@+id/switch4"
            android:layout_marginEnd="148dp"/>
    <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/switch3" android:layout_marginEnd="148dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="48dp" app:layout_constraintTop_toBottomOf="@+id/switch2"/>
    <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/switch2" android:layout_marginEnd="148dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="56dp" app:layout_constraintTop_toBottomOf="@+id/switch1"/>
    <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/switch4"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="148dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="36dp"/>

    <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="39dp"
            android:layout_height="36dp"
            style="@android:style/Widget.DeviceDefault.Light.ProgressBar"
            android:layout_marginBottom="48dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="280dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.797"
    />

    <TextView
            android:text="Server IP:"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView7"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="116dp"
            android:layout_marginEnd="240dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="1.0"/>

    <TextView
            android:text="Status:"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView8"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="160dp"
            android:layout_marginEnd="240dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="1.0"/>
    <TextView
            android:layout_width="176dp"
            android:layout_height="25dp"
            android:id="@+id/textView9" android:textSize="18sp"
            android:layout_marginBottom="160dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="48dp"/>
    <TextView
            android:layout_width="176dp"
            android:layout_height="25dp"
            android:id="@+id/textView6" android:textSize="18sp"
            android:layout_marginBottom="116dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="48dp"/>
    <TextView
            android:text=""
            android:layout_width="257dp"
            android:layout_height="97dp"
            android:id="@+id/Debug"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginBottom="208dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.152"/>


</androidx.constraintlayout.widget.ConstraintLayout>